fixed overflow issue on smaller screens

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -25,8 +25,8 @@
     @media @phone {
         display: flex;
         justify-content: center;
-        padding: 5% 11%;
-        margin-left: 10rem;
+        padding: 5% 5%;
+        margin-left: 7rem;
     }
 
 }
@@ -60,7 +60,9 @@ ul a {
     color: rgb(236,234,234);
     text-decoration: none;
     @media @phone {
-        padding: 1.4em;
+        max-width: 100%;
+        font-size: 1.6rem;
+        padding: 0.6em;
         white-space: nowrap;
         
     }
